--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>To-Do List</title>
-    <link rel="stylesheet" href="styles.css" />
+    <title>To-Do App with LocalStorage Support</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
